# BasicsOfProgrammingCourse

./: CMakeLists.txt  lab15.c  lab16.c  lab17.c  lab18.c  lab19.c  lab20.c  main.c
Polynomial/: polynomial.c  polynomial.h
algorithms/: algorithms.c  algorithms.h
matrix/: matrix.c  matrix.h
products/: product.c  product.h
string/tasks/: srting.c  string.h
vector/: vector.c
